Project

General

Profile

Actions

Bug #18484

closed

the swift container acl does not support field ".ref"

Added by wenjun jing over 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel, kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

On the openstack-swift. The container acl also supports ".ref", which is ignored on ceph swift.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #18908: jewel: the swift container acl does not support field ".ref"ResolvedNathan CutlerActions
Copied to rgw - Backport #18909: kraken: rgw: the swift container acl does not support field ".ref"ResolvedNathan CutlerActions
Actions #2

Updated by Nathan Cutler about 7 years ago

  • Project changed from Ceph to rgw
  • Category deleted (22)
  • Status changed from New to Fix Under Review
Actions #3

Updated by Yehuda Sadeh about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to jewel, kraken
Actions #4

Updated by Loïc Dachary about 7 years ago

  • Copied to Backport #18908: jewel: the swift container acl does not support field ".ref" added
Actions #5

Updated by Loïc Dachary about 7 years ago

  • Copied to Backport #18909: kraken: rgw: the swift container acl does not support field ".ref" added
Actions #6

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF