rgw: the swift container acl should support field .ref

On the openstack-swift. The container acl supports .ref, which is ignored on ceph swift.

Fixes: http://tracker.ceph.com/issues/18484
Signed-off-by: Jing Wenjun <jingwenjun@cmss.chinamobile.com>
(cherry picked from commit b06f9cd9f0900db7b0d0fbcaea69cdd0d4b10132)

Conflicts:
	src/rgw/rgw_acl_swift.cc - no extract_referer_urlspec() in jewel
            see https://github.com/ceph/ceph/pull/8657