src/rgw/rgw_acl_swift.cc
@@ -54,6 +54,7 @@ static bool uid_is_public(string& uid)
     return false;
 
   return sub.compare(".r") == 0 ||
+         sub.compare(".ref") == 0 ||
          sub.compare(".referer") == 0 ||
          sub.compare(".referrer") == 0;
 }
